--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -1,3 +1,7 @@
 <h1>
 	This is the scret page! You have been logged in!
 </h1>
+
+<li><a href='/register'>Register</a></li>
+<li><a href='/login'>Login</a></li>
+<li><a href='/logout'>Logout</a></li>
